--- a/src/app/opcoes-routlet/opcoes-routlet.component.html
+++ b/src/app/opcoes-routlet/opcoes-routlet.component.html
@@ -76,7 +76,7 @@
             </a>
         </div>
      </div>    
-                <p class="bottom-fixed back-beje">A Fulltimm é uma empresa autorizada pela Claro para a cobrança de débito.</p>
+                <p class="bottom-fixed back-beje">A Fulltime é uma empresa autorizada pela Claro para a cobrança de débito.</p>
                 
     </div>    
 
