--- a/src/app/assistente-virtual/assistente-virtual.component.html
+++ b/src/app/assistente-virtual/assistente-virtual.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <a class="card col-lg-3" href="http://m.me/negociaclaro" target=" _blank">
+    <a class="card col-lg-3" href="" target=" _blank">
             <img src="assets/icons/messenger.png" class="card-img-top" alt="...">
             <div class="card-body">
             <h5 class="card-title">Messenger</h5>
@@ -18,7 +18,7 @@
         <p class="btn btn-acessar">Quero negociar!</p>
     </a>
 
-    <a class="card col-lg-3" href="https://telegram.me/negociaclaro_bot" target=" _blank">
+    <a class="card col-lg-3" href="" target=" _blank">
         <img src="assets/icons/telegram.png" class="card-img-top" alt="...">
         <div class="card-body">
         <h5 class="card-title">Telegram</h5>
