--- a/src/app/negocie-online/negocie-online.component.html
+++ b/src/app/negocie-online/negocie-online.component.html
@@ -21,7 +21,7 @@
         </thead>
         <tbody>
           <tr>
-            <th scope="row">10/07/2007</th>
+            <th scope="row">13/07/2007</th>
             <td>1</td>
             <td>R$ 546,00</td>
           </tr>
@@ -59,12 +59,12 @@
       <div class="col-sm-5 metodo-de-pagamento">
         Método de pagamento:
       </div>
-      <div class="col-sm-3">
+      <div class="col-6 col-sm-3">
         <button type="button" class="btn btn-primary">
           À vista: R$ 100,00
         </button>
       </div>
-      <div class="col-sm-3">
+      <div class="col-6 col-sm-3">
         <button type="button" class="btn btn-primary" (click)="showOpcoesParcelamento()">
           Parcelado
         </button> 
