--- a/src/app/opcoes-routlet/opcoes-routlet.component.html
+++ b/src/app/opcoes-routlet/opcoes-routlet.component.html
@@ -20,7 +20,7 @@
                             <img src="assets/icons/negocie_online.png" class="card-img-top" alt="...">
                             <div class="card-body">
                             <h5 class="card-title">Negocie Online</h5>
-                            <p class="card-text">Some quick example text to  bulk of the card's content.</p>
+                            <p class="card-text">NEGOCIE AGORA SEUS DÉBITOS COM A CLARO DE FORMA PRÁTICA E RÁPIDA</p>
                             
                             </div>
                             <p class="btn btn-acessar">Acessar</p>
@@ -30,7 +30,8 @@
                     <img src="assets/icons/assistente-virtual.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Assistente Virtual</h5>
-                    <p class="card-text">Some quick example text to  bulk of the card's content.</p>
+                    <p class="card-text">FALE COM O NOSSO ASSITENTE VIRTUAL E NEGOCIE SEUS DÉBITOS COM A CLARO
+                </p>
                     
                     </div>
                     <p class="btn btn-acessar">Acessar</p>
@@ -40,15 +41,16 @@
                     <img src="assets/icons/receber-ligacao.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Receba nossa Ligação</h5>
-                    <p class="card-text">Some quick example text to  bulk of the card's content.</p>
+                    <p class="card-text">QUER RECEBER UMA LIGAÇÃO DE NOSSO AGENTE DIGITAL? AQUI É O LUGAR CERTO!
+                </p>
                     
                     </div>
                     <p class="btn btn-acessar">Acessar</p>
             </a>
     
-            <div class="col-lg-3" *ngIf="fizPagamentoOk">
+            <div class="col-lg-3 fiz-pagamento-ok" *ngIf="fizPagamentoOk">
                   <div class="container">
-                        <span class="red">Obrigada!</span><br><br>
+                        <span class="red">Obrigada!</span><br>
                         As informações de pagamento foram enviadas para a nossa central.<br>
                         Caso necessário entraremos em contato no nosso número:<br> 
                         0800 208 8080         
@@ -59,7 +61,8 @@
                     <img src="assets/icons/fiz-pagamento.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Já fiz o Pagamento</h5>
-                    <p class="card-text">Some quick example text to  bulk of the card's content.</p>
+                    <p class="card-text">JÁ REALIZOU O PAGAMENTO DE SEUS DÉBITOS COM A CLARO? PRESSIONE O BOTÃO ABAIXO!
+                </p>
                         
                     </div>
                     <p class="btn btn-acessar">Informar</p>
@@ -69,7 +72,8 @@
                     <img src="assets/icons/acordos.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Seus Acordos em Andamento</h5>
-                    <p class="card-text">Some quick example text to  bulk of the card's content.</p>
+                    <p class="card-text">SE TIVER UM ACORDO EM ANDAMENTO, ACESSE AQUI PARA RETIRAR A 2ª VIA.
+                </p>
                     
                     </div>
                     <p class="btn btn-acessar">Acessar</p>
