--- a/src/app/cpf-cnpj-box/cpf-cnpj-box.component.css
+++ b/src/app/cpf-cnpj-box/cpf-cnpj-box.component.css
@@ -11,6 +11,7 @@
     background: url(/assets/img/back.jpg) 100% 50% no-repeat;
     height: 100%;
     position: relative;
+    background-size: cover;
 }
 
 .cpf-box {
