--- a/src/app/opcoes-routlet/opcoes-routlet.component.css
+++ b/src/app/opcoes-routlet/opcoes-routlet.component.css
@@ -1,3 +1,7 @@
+h3 {
+    margin-bottom: 0;
+}
+
 .back-beje {
     background: #f8f8f8;
 }
@@ -20,8 +24,8 @@
 }
 
 .card-body {
-    height: 200px;
-    
+    height: 185px;
+    padding-top: 10px;
 }
 
 .card-img-top {
@@ -32,6 +36,10 @@
 
 .card-title {
     font-size: 18px;
+}
+
+.card-text {
+    font-size: 15px;
 }
 
 .btn-acessar {
@@ -72,8 +80,15 @@
         padding-left: 17px;
         }
       
+    .fiz-pagamento-ok {
+        margin-top: 30px;
+    }    
 
 @media (max-width: 768px) {
+
+    .fiz-pagamento-ok {
+        margin-top: 10px;
+    }
 
     .bottom-fixed {
         font-size: 14px;
@@ -89,7 +104,8 @@
         width: 80%;
         /* text-align: center; */
         flex-direction: row;
-        margin-top: 8px;       
+        margin-top: 8px;  
+        height: 90px;     
     }
 
     .card-text, .card-title {
@@ -106,7 +122,7 @@
     } 
 
      .card-body {
-        height: auto;
+        height: 90px;
         padding-top: 5px;
         padding-bottom: 5px;
 
