--- a/src/app/assistente-virtual/assistente-virtual.component.html
+++ b/src/app/assistente-virtual/assistente-virtual.component.html
@@ -2,8 +2,8 @@
     <a class="card col-lg-3" href="" target=" _blank">
             <img src="assets/icons/messenger.png" class="card-img-top" alt="...">
             <div class="card-body">
-            <h5 class="card-title">Messenger</h5>
-            <p class="card-text">Some quick example text to  bulk of the card's content.</p>
+            <h5 class="card-title">MESSENGER</h5>
+            <p class="card-text">Converse conosco pelo messenger do Facebook!</p>
             </div>
             <p class="btn btn-acessar">Quero negociar!</p>
     </a>
@@ -11,8 +11,8 @@
     <a class="card col-lg-3" target=" _blank">
         <img src="assets/icons/virtual_assistant.png" class="card-img-top" alt="...">
         <div class="card-body">
-        <h5 class="card-title">Assistente Virtual</h5>
-        <p class="card-text">Some quick example text to  bulk of the card's content.</p>
+        <h5 class="card-title">ASSISTENTE VIRTUAL</h5>
+        <p class="card-text">Converse conosco pelo chat!</p>
         
         </div>
         <p class="btn btn-acessar">Quero negociar!</p>
@@ -21,8 +21,8 @@
     <a class="card col-lg-3" href="" target=" _blank">
         <img src="assets/icons/telegram.png" class="card-img-top" alt="...">
         <div class="card-body">
-        <h5 class="card-title">Telegram</h5>
-        <p class="card-text">Some quick example text to  bulk of the card's content.</p>
+        <h5 class="card-title">TELEGRAM</h5>
+        <p class="card-text">Converse conosco pelo Telegram!</p>
         
         </div>
         <p class="btn btn-acessar">Quero negociar!</p>
