--- a/src/app/opcoes-routlet/opcoes-routlet.component.html
+++ b/src/app/opcoes-routlet/opcoes-routlet.component.html
@@ -19,8 +19,8 @@
                     <a class="card col-lg-2" (click)="negocieOnline()">
                             <img src="assets/icons/negocie_online.png" class="card-img-top" alt="...">
                             <div class="card-body">
-                            <h5 class="card-title">Negocie Online</h5>
-                            <p class="card-text">NEGOCIE AGORA SEUS DÉBITOS COM A CLARO DE FORMA PRÁTICA E RÁPIDA</p>
+                            <h5 class="card-title">NEGOCIE ONLINE</h5>
+                            <p class="card-text">Clique e tenha as melhores condições para negociar com a Claro de forma rápida e prática.</p>
                             
                             </div>
                             <p class="btn btn-acessar">Acessar</p>
@@ -29,9 +29,8 @@
             <a class="card col-lg-2" (click)="assistenteVirtual()">
                     <img src="assets/icons/assistente-virtual.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                    <h5 class="card-title">Assistente Virtual</h5>
-                    <p class="card-text">FALE COM O NOSSO ASSITENTE VIRTUAL E NEGOCIE SEUS DÉBITOS COM A CLARO
-                </p>
+                    <h5 class="card-title">ASSISTENTE VIRTUAL</h5>
+                    <p class="card-text">Converse agora com nosso Assistente Virtual, não perca tempo!</p>
                     
                     </div>
                     <p class="btn btn-acessar">Acessar</p>
@@ -40,9 +39,8 @@
             <a class="card col-lg-2" (click)="recebaNossaLigacao()">
                     <img src="assets/icons/receber-ligacao.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                    <h5 class="card-title">Receba nossa Ligação</h5>
-                    <p class="card-text">QUER RECEBER UMA LIGAÇÃO DE NOSSO AGENTE DIGITAL? AQUI É O LUGAR CERTO!
-                </p>
+                    <h5 class="card-title">RECEBA NOSSA LIGAÇÃO</h5>
+                    <p class="card-text">Quer receber uma ligação de nosso agente digital? Aqui é o lugar certo!</p>
                     
                     </div>
                     <p class="btn btn-acessar">Acessar</p>
@@ -60,9 +58,8 @@
             <div class="card col-lg-2" *ngIf="cardBodyPagamento" (click)="fizPagamento()">
                     <img src="assets/icons/fiz-pagamento.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                    <h5 class="card-title">Já fiz o Pagamento</h5>
-                    <p class="card-text">JÁ REALIZOU O PAGAMENTO DE SEUS DÉBITOS COM A CLARO? PRESSIONE O BOTÃO ABAIXO!
-                </p>
+                    <h5 class="card-title">JÁ FIZ O PAGAMENTO</h5>
+                    <p class="card-text">Já realizou o pagamento de seus débitos com a claro? pressione o botão abaixo!</p>
                         
                     </div>
                     <p class="btn btn-acessar">Informar</p>
@@ -71,16 +68,15 @@
             <a class="card col-lg-2" (click)="acordosAndamento()">
                     <img src="assets/icons/acordos.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                    <h5 class="card-title">Seus Acordos em Andamento</h5>
-                    <p class="card-text">SE TIVER UM ACORDO EM ANDAMENTO, ACESSE AQUI PARA RETIRAR A 2ª VIA.
-                </p>
+                    <h5 class="card-title">SEUS ACORDOS EM ANDAMENTO</h5>
+                    <p class="card-text">Se tiver um acordo em andamento, acesse aqui para retirar a 2ª via.</p>
                     
                     </div>
                     <p class="btn btn-acessar">Acessar</p>
             </a>
         </div>
      </div>    
-                <p class="bottom-fixed back-beje">A Fulltime é uma empresa autorizada pela Claro para a cobrança de débito.</p>
+                <a class="bottom-fixed back-beje" target="_blank" href="http://www.fulltimesolucoes.com.br/">A Fulltime é uma empresa autorizada pela Claro para a cobrança de débito.</a>
                 
     </div>    
 
