--- a/src/app/cpf-cnpj-box/cpf-cnpj-box.component.html
+++ b/src/app/cpf-cnpj-box/cpf-cnpj-box.component.html
@@ -1,10 +1,8 @@
 <div class="tela-grid">
 
-    
-
  <div class="cpf-box">
     <img src="assets/img/logo.png" alt="Claro" class="logo">
-    <p>Quer negociar seus débitos com a Claro? <br> Inicie aqui uma consulta sem custo!  </p>
+    <p>Quer negociar com a Claro? <br> Inicie aqui uma consulta sem custo!  </p>
         <div class="form-group"> 
             <input type="text" [textMask]="mask()" class="form-control col-sm-8" aria-describedby="emailHelp" placeholder="Digite seu CPF ou CNPJ" [(ngModel)]="cpf_cnpj" (input)="cleanAlerts()" (keydown.backspace)="backspacePress($event)" (keydown.enter)="valida()">
             <button type="submit" class="col-sm-3" (click)="valida()">Verificar</button>            
@@ -19,6 +17,6 @@
     </div> 
  </div>
 
- <p class="fixed-bottom auto_inicio">A Fulltime é uma empresa autorizada pela Claro para a cobrança de débito.</p>
+    <a class="fixed-bottom auto_inicio" target="_blank" href="http://www.fulltimesolucoes.com.br/">A Fulltime é uma empresa autorizada pela Claro para a cobrança de débito.</a>
 
 </div>
