--- a/src/app/prazo-finalizacao/prazo-finalizacao.component.html
+++ b/src/app/prazo-finalizacao/prazo-finalizacao.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="fim">
-  <p>Detalhes do acordo:</p>
+  <p class="detalhes-titulo">Detalhes do acordo:</p>
   <p>Data do primeiro pagamento: 14/02/2019</p>
   <p>Valor da parcela: R$ 10,00</p>
   <p>Demais parcelas: 2 x R$ 10,00</p>
@@ -9,12 +9,12 @@
         Confirmar acordo
       </button>
     </div>
-    <div class="col-sm-4">
+    <div class="col-6 col-sm-4">
       <button type="button" class="btn btn-primary" (click)="mudarData()">
         Mudar data
       </button>
     </div>
-    <div class="col-sm-4">
+    <div class="col-6 col-sm-4">
       <button type="button" class="btn btn-primary" (click)="voltar()">
         Mudar parcelamento
       </button>
