--- a/src/styles.css
+++ b/src/styles.css
@@ -14,14 +14,17 @@
 
 
 body {
-    font-size: 18px;
-    
+    font-size: 18px;    
     font-family: DINOT-MEDIUM;
 }
 
 body, html {
     height: 100%;
     background: #f8f8f8;
+}
+
+a:hover {
+  text-decoration: none;
 }
 
 .red {
@@ -41,6 +44,13 @@ h3 {
   margin-bottom: 15px;
   font-size: 22px;
 }
+
+.card-title {
+  text-align: center;
+  font-size: 17px;
+  font-weight: bold;
+}
+
 
 @media (max-width: 768px) {
 
