--- a/src/app/negocie-online/negocie-online.component.html
+++ b/src/app/negocie-online/negocie-online.component.html
@@ -40,9 +40,10 @@
         Valor total: R$ {{ dadosDivida[ind].Parcelas.ParcelaDivida.Valor }}
       </div>
       <div class="col-6 col-sm-3">
-        <button type="button" class="btn btn-primary">
-          À vista: R$ {{ getValorAVista(dadosDivida[ind].CodigoTitulo) }} 
-         <!-- apiRestService.opcoesPg[apiRestService.getDividasClaroMovel()[ind].CodigoTitulo] | async 
+        <button type="button" class="btn btn-primary"> <!-- *ngIf="apiRestService.opcoesPg[dadosDivida[ind].CodigoTitulo] | async"> -->
+          À vista: R$ {{ apiRestService.opcoesPg[dadosDivida[ind].CodigoTitulo] | async }}
+          <!--  getValorAVista(dadosDivida[ind].CodigoTitulo) }} 
+          apiRestService.opcoesPg[apiRestService.getDividasClaroMovel()[ind].CodigoTitulo] | async 
             getOpcaoAVista(apiRestService.getDividasClaroMovel()[ind].CodigoTitulo) 
             apiRestService.getOpcaoAVista(apiRestService.getDividasClaroMovel()[ind].CodigoTitulo) -->
         </button>
