--- a/src/app/negocie-online/negocie-online.component.css
+++ b/src/app/negocie-online/negocie-online.component.css
@@ -33,7 +33,18 @@ table {
 }
 
 .metodo-pagamento {
-    margin-top: 30px;
+    margin-top: 25px;
+}
+
+.movelLabel {
+    display: inline-block;
+    margin-left: 100px;
+    color: black;
+    font-weight: bold;
+}
+
+.panel-collapse > div {
+    padding-top: 0 !important
 }
 
 .opcoes-para-parcelamento {
@@ -41,7 +52,8 @@ table {
 }
 
 .metodo-de-pagamento {
-    text-align: right;
+    text-align: center;
+    margin-bottom: 5px;
 }
 
 @media (max-width: 768px) {
@@ -64,6 +76,8 @@ table {
     }
     
     .metodo-de-pagamento {
+        margin-bottom: 0;
+        margin-top: 5px;
         text-align: left;
     }
 
