--- a/src/styles.css
+++ b/src/styles.css
@@ -35,6 +35,10 @@ a:hover {
   height: 100%;
 }
 
+.font-15px {
+  font-size: 15px !important;
+}
+
 .padding-right-10px {
   padding-right: 10px;
 }
